# MathFalls

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/mathfalls/: __init__.py  __main__.py  app.py  camera.py  game.py  leaderboard.py
